src/ui/snapshots/kvn_tui__ui__layout__tests__draw_traffic_panel_snapshot.snap
---
source: src/ui/layout.rs
expression: "snapshot_terminal(&model, 100, 20)"
---
┌ Traffic ─────────────────────────────────────────────────────────────────────────────────────────┐
│↑  12 KB/s  ↓ 3.3 MB/s    Total: ↑ 142 MB  ↓ 3.0 GB    18 connections                             │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
┌ Sources ───────────────────────────────────────┐┌ Logs ──────────────────────────────────────────┐
│Standalone profiles (1)                         ││                                                │
│└ Alpha                       vless  1.1.1.1:443││                                                │
│                                                ││                                                │
│                                                ││                                                │
│                                                ││                                                │
│                                                ││                                                │
│                                                ││                                                │
│                                                ││                                                │
│                                                ││                                                │
│                                                ││                                                │
│                                                ││                                                │
│                                                ││                                                │
│                                                ││                                                │
│                                                ││                                                │
└────────────────────────────────────────────────┘└────────────────────────────────────────────────┘
 CONNECTED  Alpha                                                                        DoH  Global
